Remove deprecated security manager JVM option from compose-cli render tests
Remove `-Djava.security.manager=allow` from the CLI render command arguments
to ensure compatibility with JDK 25, where the flag is deprecated and triggers
errors.

Bug: 522339885
Test: bazel test //tools/base/standalone-render/compose-cli:compose-cli-render-tests
Change-Id: Id350c04364189a75bb0bf9d2ccf45a592e42aea6